# app/Http/Resources/FolderResource.php
@@ -19,9 +19,14 @@ class FolderResource extends JsonResource
             'name' => $this->name,
             'content' => $this->content,
             'is_public' => $this->is_public,
+            'parent_id' => $this->parent_id,
+            'type' => $this->type,
             'created_by_user' => $this->created_by_user,
             'created_at' => $this->created_at->format('d/m/Y'),
             'updated_at' => $this->updated_at->format('d/m/Y'),
+            'links' => [
+                'self' => route('folders.show', ['folder' => $this->id]),
+            ],
         ];
     }
 }
